fix(ui): tabs overflow

--- a/packages/ui/components/Tabs/index.less
+++ b/packages/ui/components/Tabs/index.less
@@ -12,6 +12,10 @@
       height: 100%;
     }
 
+    &-content-holder {
+      overflow: auto;
+    }
+
     &-tabpane {
       height: 100%;
     }
